--- a/src/pages/send-coins/send-coins.html
+++ b/src/pages/send-coins/send-coins.html
@@ -138,14 +138,17 @@
       <p style="margin: 0 0; padding: 2px 0; background-color: #AFABAB"></p>
     </div>
 
-    <ion-row [ngStyle]="{'position':'relative', 'margin':'3em 0'}">
-      <button ion-button (click)="sendCoins()" [ngStyle]="{
-        'background-color': coinColor,
-        'position':'absolute',
-        'left':'50%',
-        'width':'15em',
-        'margin-left':'-7.5em'
-      }">
+    <ion-row style="height: 40px; position: relative; margin-top: 35px">
+      <button ion-button (click)="startWithoutAccount()" [ngStyle]="{'background-color': ctx.fidOrange}"
+      style="
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 40px;
+        width: 90%;
+        margin-top: -20px;
+        margin-left: -45%;
+        ">
         {{ 'SEND.SEND' | translate }} {{coinName}}!
       </button>
     </ion-row>
