Commit 29 - Google Maps 1

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -24,5 +24,65 @@
 <ion-content>
   <div #map id="map" style="width: 100%; height: 100%; background-color: transparent">
   </div>
+
+
+
+  <!-- <div style="
+      background-color: white;
+      position: relative;
+      height: 130px;
+      overflow: auto;
+      overflow-y:hidden;
+      overflow-x:hidden;">
+      <img-loader
+        fallback="assets/images/default_images/defaultLandscape.png"
+        src="{{ landscape }}"
+        style="position: relative; height: 130px !important; max-height: 130px; overflow: auto !important;" useImg>
+      </img-loader>
+      <div style="
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 130px;
+        clear: both;
+        background-color: rgba(255, 255, 255, 0.75);
+        color: #ffffff;">
+
+        <ion-row>
+        <ion-col col-3>
+        </ion-col>
+        <ion-col col-6>
+          <ion-row style="height: 80px">
+            <img-loader
+              fallback="assets/images/default_images/defaultBrandIcon.png"
+              style="
+              border-radius: 40px;
+              position: absolute;
+              height: 80px;
+              width: 80px;
+              left: 50%;
+              margin-left: -40px;
+              border: 1px solid #afabab;"
+              src="{{ brandIcon }}" useImg>
+            </img-loader>
+          </ion-row>
+          <ion-row style="margin-top: 5px;">
+            <ion-col style="text-align: center; margin: 0 0; padding: 0 0;">
+              <p style="
+                color: grey;
+                font-size: 130%;
+                margin: 0 0;">
+                {{ companyName }}</p>
+            </ion-col>
+          </ion-row>
+        </ion-col>
+        <ion-col col-3>
+        </ion-col>
+
+      </ion-row>
+      </div>
+  </div> -->
+
   <!-- <button style="background-color: black; heigth: 30px; width: 30px; bottom: 20px; right: 20px" (click)="goBack()"></button> -->
 </ion-content>
