Commit 30 - Google Maps 2

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -224,11 +224,13 @@
 
 
 
+<!-- -------------------------------------------- FOOTER -------------------------------------------- -->
+
 <ion-footer style="text-align: center;">
 <!-- align to the bottom of the page -->
 <!-- <div style="position: absolute; bottom: 0px; width: 100%; z-index:10; background-color: white"> -->
   <div class="greyBar">
-    <p style="margin: 0 0; padding: 3px 0; color: white">{{ 'HOME.COLLECT' | translate }}</p>
+    <p style="margin: 0 0; padding: 3px 0; color: grey"><{{ 'HOME.COLLECT' | translate }}</p>
   </div>
 
   <button (click)="collectCoins()" style="width: 100%; background-color: white">
