--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -25,6 +25,10 @@
   <div #map id="map" style="width: 100%; height: 100%; background-color: transparent">
   </div>
 
+  <!-- <button onclick="function(){
+    console.log('Print');
+  }()">BlaBla</button> -->
+
 
 
   <!-- <div style="
