--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -115,7 +115,7 @@
       </p>
       <ion-input
         *ngIf="modifying"
-        style="color: #fe9400;
+        style="color: #404040;
           font-size: 16px;
           font-family: 'Verdana' !important;
           border-bottom: 1px solid grey;"
@@ -140,7 +140,7 @@
       </p>
       <ion-input
         *ngIf="modifying"
-        style="color: #fe9400;
+        style="color: #404040;
           font-size: 16px;
           font-family: 'Verdana' !important;
           border-bottom: 1px solid grey;"
@@ -165,7 +165,7 @@
       </p>
       <ion-input
         *ngIf="modifying"
-        style="color: #fe9400;
+        style="color: #404040;
           font-size: 16px;
           font-family:'Verdana' !important;
           border-bottom: 1px solid grey;"
@@ -196,7 +196,7 @@
       </p>
       <ion-input
         *ngIf="modifying"
-        style="color: #fe9400;
+        style="color: #404040;
           font-size: 16px;
           font-family: 'Verdana' !important;
           border-bottom: 1px solid grey;"
@@ -345,7 +345,7 @@
   </ion-row>
 
   <ion-row style="height: 40px; position: relative; margin-top: 20px">
-    <button ion-button (click)="createNewAccount()" [ngStyle]="{'background-color': ctx.fidOrange}"
+    <button ion-button (click)="createNewAccount()" [ngStyle]="{'background-color': ctx.fidDarkGrey}"
     style="
       position: absolute;
       top: 50%;
