--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -62,7 +62,7 @@
 
 
   <div style="
-      background-color: white;
+      background-color: yellow;
       position: relative;
       height: 130px;
       overflow: auto;
@@ -71,7 +71,10 @@
       <img-loader
         fallback="assets/images/default_images/defaultLandscape.png"
         src="{{ landscape }}"
-        style="position: relative; height: 130px !important; max-height: 130px; overflow: auto !important;" useImg>
+        style="
+          height: 130px !important;
+          max-height: 130px;
+          overflow: auto !important;" useImg>
       </img-loader>
       <div style="
         position: absolute;
