--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -279,7 +279,7 @@
       </p>
     </ion-col>
     <ion-col col-2>
-      <ion-toggle [(ngModel)]="demoMode" (ionChange)="switchDemoMode()" style="margin: 2px 0"></ion-toggle>
+      <ion-toggle [(ngModel)]="newDemoMode" (ionChange)="switchDemoMode()" style="margin: 2px 0"></ion-toggle>
     </ion-col>
   </ion-row>
 
