--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -18,100 +18,13 @@
     </ion-buttons>
   </ion-navbar>
 
-  <!-- <ion-row style="background-color: green; height: 40px; padding: 0 0; margin: 0 0;" [ngStyle]="{'background-color': 'rgba(255, 255, 255, 0.5)'}">
-
-    <ion-col col-4 style="background-color: blue">
-    </ion-col>
-    <ion-col col-4 style="background-color: red; padding: 0 0; margin: 0 0; display: table;">
-      <div style="background-color: green;
-        position: relative;
-        padding: 0 0;
-        margin: 0 0;
-        display: table-cell;">
-        <ion-toggle [(ngModel)]="myCoinsIsOn" (ionChange)="switchCoinMode()"
-          style="margin: 2px 0;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            height: 20px;
-            width: 60px;
-            margin-top: -10px;
-            margin-left: -30px;
-            background-color: yellow;
-          ">
-        </ion-toggle>
-      </div>
-    </ion-col>
-    <ion-col col-4 style="background-color: blue">
-    </ion-col>
-  </ion-row> -->
-
 </ion-header>
 
-<!-- <div>
+<!-- <div> 255, 255, 255, 0.70
   <div #header id="header">
-  <ion-list-header *ngIf="ctx.getCoins(myCoinsIsOn).length!=0" [ngStyle]="{'background-color': 'rgba(255, 255, 255, 0.85)'}">
+  <ion-list-header>
     <div class="item-content">
-     <ion-row style="margin-left: 0; margin-right: 5%!important; padding-top: 0; padding-bottom: 0; height: 20px; background-color: blue">
 
-      <ion-col col-3 style="
-        margin: 0 0;
-        padding: 0 0;
-        display: table;
-        align-self: stretch;
-        height: 25px;">
-      </ion-col>
-
-      <ion-col col-6 style="
-        padding: 0 0;
-        margin: 0 0;
-        display: table;
-        text-align: center !important;">
-        <div style="
-          padding: 0 0;
-          margin: 0 0;
-          height: 25px !important;
-          display: table-cell;
-          vertical-align: middle;
-          text-align: left;
-          ">
-          <h2 style="
-            max-height: 20px;
-            color: grey;
-            font-size: 12px;
-            margin: 0px 5px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: normal;
-            ">
-            {{ 'HOME.TYPE' | translate }}
-          </h2>
-        </div>
-      </ion-col>
-
-      <ion-col col-3 style="
-        margin: 0 0;
-        padding: 0 0;
-        display: table;">
-        <div style="
-          padding: 0 0;
-          margin: 0 0;
-          height: 25px !important;
-          display: table-cell;
-          vertical-align: middle;
-          text-align: left;
-        ">
-          <h2 class="text" text-center style="
-            color: grey;
-            font-size: 12px;
-            max-height: 20px;
-            margin: 5px 5px;">
-            {{ 'HOME.AMOUNT' | translate }}
-          </h2>
-        </div>
-      </ion-col>
-
-    </ion-row>
   </div>
   </ion-list-header>
 </div>
@@ -120,16 +33,127 @@
 
 
 <ion-content>
+
+  <div ion-fixed style="padding: 0 0; margin: 0 0; width: 100%">
+    <ion-row [ngStyle]="{'background-color': 'rgba(255, 255, 255, 0.85)'}"
+      style="height: 40px; padding: 0 0; margin: 0 0;">
+
+      <ion-col col-5 style="background-color: transparent; display: table; padding: 0 0; margin: 0 0;">
+        <div style="
+          height: 40px;
+          font-size: 18px;
+          display: table-cell;
+          vertical-align: middle;
+          text-align: right;">
+          <p style="color: grey; padding: 0 0; margin: 0 0;">
+            All coins
+          </p>
+        </div>
+      </ion-col>
+      <ion-col col-2 tyle="background-color: transparent"style="
+        background-color: transparent;
+        padding: 0 0;
+        margin: 0 0;
+        position: relative;
+        ">
+        <ion-toggle [(ngModel)]="myCoinsOnly" (ionChange)="switchCoinMode()"
+        style="
+          text-align: center;
+          position: absolute;
+          left: 10%;">
+        </ion-toggle>
+      </ion-col>
+      <ion-col col-5 style="background-color: transparent; display: table; padding: 0 0; margin: 0 0;">
+        <div style="
+          height: 40px;
+          font-size: 18px;
+          display: table-cell;
+          vertical-align: middle;
+          text-align: left;">
+          <p style="color: grey; padding: 0 0; margin: 0 0;">
+            My coins only
+          </p>
+        </div>
+      </ion-col>
+    </ion-row>
+  </div>
+
+
+  <!-- <div ion-fixed *ngIf="ctx.getCoins(myCoinsOnly).length!=0" [ngStyle]="{'background-color': 'rgba(255, 255, 255, 0.85)'}"
+    style="height: 20px; padding: 0 0; margin: 0 0; width: 100%; margin-top: 40px;">
+    <ion-row style="margin-left: 0; margin-right: 5%!important; padding-top: 0; padding-bottom: 0;">
+
+     <ion-col col-3 style="
+       margin: 0 0;
+       padding: 0 0;
+       display: table;
+       align-self: stretch;
+       height: 25px;">
+     </ion-col>
+
+     <ion-col col-6 style="
+       padding: 0 0;
+       margin: 0 0;
+       display: table;
+       text-align: center !important;">
+       <div style="
+         padding: 0 0;
+         margin: 0 0;
+         height: 25px !important;
+         display: table-cell;
+         vertical-align: middle;
+         text-align: left;
+         ">
+         <h2 style="
+           max-height: 20px;
+           color: grey;
+           font-size: 12px;
+           margin: 0px 5px;
+           overflow: hidden;
+           text-overflow: ellipsis;
+           white-space: normal;
+           ">
+           {{ 'HOME.TYPE' | translate }}
+         </h2>
+       </div>
+     </ion-col>
+
+     <ion-col col-3 style="
+       margin: 0 0;
+       padding: 0 0;
+       display: table;">
+       <div style="
+         padding: 0 0;
+         margin: 0 0;
+         height: 25px !important;
+         display: table-cell;
+         vertical-align: middle;
+         text-align: left;
+       ">
+         <h2 class="text" text-center style="
+           color: grey;
+           font-size: 12px;
+           max-height: 20px;
+           margin: 5px 5px;">
+           {{ 'HOME.AMOUNT' | translate }}
+         </h2>
+       </div>
+     </ion-col>
+
+   </ion-row>
+  </div> -->
+
+
   <div #map id="map" style="width: 100%; height: 100%;">
   </div>
 
 
-  <div #list id="list">
+  <div #list id="list" style="margin-top: 40px;">
 
-  <ion-list *ngIf="ctx.getCoins(myCoinsIsOn).length!=0">
+  <ion-list *ngIf="ctx.getCoins(myCoinsOnly).length!=0">
 
 
-    <ion-item-sliding *ngFor="let cc of ctx.getCoins(myCoinsIsOn)">
+    <ion-item-sliding *ngFor="let cc of ctx.getCoins(myCoinsOnly)">
 
       <button ion-item (click)="itemTapped($event, cc)" [ngStyle]="{'background-color': 'rgba(255, 255, 255, 0.85)'}">
         <ion-row>
@@ -212,7 +236,7 @@
     </ion-item-sliding>
   </ion-list>
 
-  <div *ngIf="ctx.getCoins(myCoinsIsOn).length==0">
+  <div *ngIf="ctx.getCoins(myCoinsOnly).length==0">
   <ion-row text-center style="height: 80px; margin-top: 30px; width: 100%; position: relative">
     <img-loader
       (click)="showMap()"
