--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -94,6 +94,7 @@
             <img-loader
               fallback="assets/images/default_images/defaultBrandIcon.png"
               style="
+              background-color: white;
               border-radius: 40px;
               position: absolute;
               height: 80px;
