--- a/src/pages/item-detail/item-detail.html
+++ b/src/pages/item-detail/item-detail.html
@@ -62,7 +62,6 @@
 
 
   <div style="
-      background-color: yellow;
       position: relative;
       height: 130px;
       overflow: auto;
@@ -106,7 +105,7 @@
             </img-loader>
           </ion-row>
           <ion-row style="margin-top: 5px;">
-            <ion-col style="text-align: center; margin: 0 0; padding: 0 0;">
+            <ion-col col-12 style="text-align: center; margin: 0 0; padding: 0 0;">
               <p style="
                 color: grey;
                 font-size: 130%;
