--- a/src/pages/send-coins/send-coins.html
+++ b/src/pages/send-coins/send-coins.html
@@ -139,7 +139,7 @@
     </div>
 
     <ion-row style="height: 40px; position: relative; margin-top: 35px">
-      <button ion-button (click)="startWithoutAccount()" [ngStyle]="{'background-color': ctx.fidOrange}"
+      <button ion-button (click)="sendCoins()" [ngStyle]="{'background-color': coinColor}"
       style="
         position: absolute;
         top: 50%;
