--- a/src/pages/receive-coins/receive-coins.html
+++ b/src/pages/receive-coins/receive-coins.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar [ngStyle]="{'background-color': coinColor}">
+  <ion-navbar id="colorNavbar-receive">
     <ion-title>{{ 'RECEIVE.RECEIVE' | translate }}</ion-title>
 
     <ion-buttons end>
