--- a/src/pages/send-coins/send-coins.html
+++ b/src/pages/send-coins/send-coins.html
@@ -198,7 +198,7 @@
       margin-left: -45%;
       font-size: 11px;
       color: grey">
-      {{toAddress}}
+      {{scannedCode}}
     </h4>
     </ion-row>
 
