--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -15,13 +15,13 @@
 
 <ion-content padding>
 
-  <ion-row style="height: 70px; position: relative; margin-top: 40px;">
+  <ion-row style="height: 70px; position: relative; margin-top: 50px;">
     <div style="
         position: absolute;
         left: 50%;
-        width: 70%;
-        margin-left: -35%;
-        top: 50%;
+        width: 60%;
+        margin-left: -30%;
+        top: 60%;
         height: 70px;
         margin-top: -25px;">
         <img-loader
@@ -45,8 +45,7 @@
         vertical-align: middle;
         text-align: center;
         ">
-        <h2 style="
-          color: grey;
+        <h2 [ngStyle]="{'color': ctx.fidDarkGrey}" style="
           font-size: 12px;
           margin: 0px 5px;
           text-overflow: ellipsis;
@@ -59,19 +58,19 @@
   </ion-row>
 
   <ion-row style="position: relative; margin-top: 20px;">
-    <div style="position: absolute; height: 2px; left: 50%; width: 80%; margin-left: -40%; background-color: #ffffff">
+    <div [ngStyle]="{'background-color': ctx.fidGrey}" style="position: absolute; height: 2px; left: 50%; width: 80%; margin-left: -40%;">
     </div>
   </ion-row>
 
-  <ion-row style="height: 120px; position: relative; margin-top: 40px;">
+  <ion-row style="height: 120px; position: relative; margin-top: 15px;">
     <div style="
         position: absolute;
         left: 50%;
-        width: 90%;
-        margin-left: -45%;
+        width: 60%;
+        margin-left: -30%;
         top: 50%;
-        height: 120px;
-        margin-top: -60px;">
+        height: 90px;
+        margin-top: -45px;">
         <img-loader
           fallback="assets/images/other/coins.png"
           src="assets/images/other/coins.png" useImg>
@@ -79,8 +78,8 @@
     </div>
   </ion-row>
 
-  <ion-row style="height: 40px; position: relative; margin-top: 35px">
-    <button ion-button (click)="startWithoutAccount()" [ngStyle]="{'background-color': ctx.fidOrange}"
+  <ion-row style="height: 40px; position: relative; margin-top: 60px">
+    <button ion-button (click)="startWithoutAccount()" [ngStyle]="{'background-color': ctx.fidDarkGrey}"
     style="
       position: absolute;
       top: 50%;
